# BrigadierRevived

./: .gitignore  example_simple_command_builder.py  pyproject.toml
brigadier/: __init__.py  ambiguity_consumer.py  command_dispatcher.py  literal_message.py  parse_result.py  result_consumer.py  string_reader.py
brigadier/arguments/: __init__.py  float_argument_type.py  integer_argument_type.py  string_argument_type.py
brigadier/brigadierrevived.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
brigadier/builder/: __init__.py  argument_builder.py  literal_argument_builder.py  required_argument_builder.py  simple_command_builder.py
brigadier/context/: __init__.py  command_context.py  command_context_builder.py  parsed_argument.py  parsed_command_node.py  string_range.py  suggestion_context.py
brigadier/exceptions/: __init__.py  built_in_exceptions.py  command_expection.py  command_syntax_exception.py  dynamic_command_exception.py  simple_command_exception.py
brigadier/suggestion/: __init__.py  integer_suggestion.py  suggestion.py  suggestions.py  suggestions_builder.py
brigadier/tree/: __init__.py  argument_command_node.py  command_node.py  literal_command_node.py  root_command_node.py
tests/: test_command_dispatcher.py  test_simple_command_builder.py  test_string_reader.py
